fix(frontend): fix column wrap issue in mobile

--- a/frontend/src/assets/scss/_column.scss
+++ b/frontend/src/assets/scss/_column.scss
@@ -21,6 +21,10 @@
 }
 
 @media #{$mobileTablet} {
+  .row {
+    flex-wrap: wrap;
+  }
+
   .column {
     flex: 0 1 100%;
 
